# videoscale

./: CMakeLists.txt  LICENSE.txt  buffer.c  buffer.h  error.h  filtergraph.c  filtergraph.h  frame.c  frame.h  log.h  mathutils.h  options.c  options.h  pixelformat.c  pixelformat.h  queue.c  queue.h  threadpool.c  threadpool.h  videoscale.c  videoscale.h
app/: CMakeLists.txt  test.c
app/assets/: torvalds-1280x720.yuv
filters/: vsf_sink.c  vsf_sink.h
filters/x86/: common.c  common.h  vsf_lowpass.c  vsf_lowpass.h  vsf_nn.c  vsf_nn.h
tests/: CMakeLists.txt  test_buffer.c  test_frame.c  test_queue.c  unit_test.h
tests/benchmarks/: CMakeLists.txt  benchmark.h  vsf_nn_benchmark.c
